# inventory-management

./: .gitignore  README.md  pyproject.toml
inv-manager/: __init__.py  models.py
inv_manager/: __init__.py  balance.py  database.py  locations.py  models.py  product_movements.py  products.py
inv_manager/static/: scripts.js  style.css
inv_manager/templates/: balance.html  base.html  location_detail.html  location_list.html  product_detail.html  product_list.html  product_movement_detail.html  product_movement_list.html
