[tool.poetry]
name = "inventory-management"
version = "0.1.0"
description = "A simple flask app to manage inventory of items in warehouses"
authors = ["Balamurali M <balamurali05@outlook.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
