[tool.poetry]
name = "inventory-management"
version = "0.1.0"
description = "A simple flask app to manage inventory of items in warehouses"
authors = ["Balamurali M <balamurali05@outlook.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
rope = "^0.17.0"
autopep8 = "^1.5.3"
jedi = "^0.17.2"
pynvim = "^0.4.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
